--- a/index.html
+++ b/index.html
@@ -30,58 +30,58 @@
                 <div>
                     <form class="form-horizontal">
                         <div class="form-group">
-                            <div class="col-xs-12 col-sm-2">
+                            <div class="col-xs-12 col-sm-3">
                                 <label for="inputName">Name</label>
                             </div>
-                            <div class="col-xs-12 col-sm-10">
+                            <div class="col-xs-12 col-sm-9">
                                 <input type="text" class="form-control" id="inputName">
                             </div>
                         </div>
                         <div class="form-group">
-                            <div class="col-xs-12 col-sm-2">
+                            <div class="col-xs-12 col-sm-3">
                                 <label for="inputEmail">Email Address</label>
                             </div>
-                            <div class="col-xs-12 col-sm-10">
+                            <div class="col-xs-12 col-sm-9">
                                 <input type="email" class="form-control" id="inputEmail">
                             </div>
                         </div>
                         <div class="form-group">
-                            <div class="col-xs-12 col-sm-2">
+                            <div class="col-xs-12 col-sm-3">
                                 <label for="inputPhone">Phone</label>
                             </div>
-                            <div class="col-xs-12 col-sm-10">
+                            <div class="col-xs-12 col-sm-9">
                                 <input type="number" class="form-control" id="inputPhone">
                             </div>
                         </div>
                         <div class="form-group">
-                            <div class="col-xs-12 col-sm-2">
+                            <div class="col-xs-12 col-sm-3">
                                 <label for="inputDob">Date of Birth</label>
                             </div>
-                            <div class="col-xs-12 col-sm-10">
+                            <div class="col-xs-12 col-sm-9">
                                 <input type="date" class="form-control" id="inputDob" placeholder="dd/mm/yyyy">
                             </div>
                         </div>
                         <div class="form-group">
-                            <div class="col-xs-12 col-sm-2">
+                            <div class="col-xs-12 col-sm-3">
                                 <label for="inputId">ID (KTP/KITAS)</label>
                             </div>
-                            <div class="col-xs-12 col-sm-10">
+                            <div class="col-xs-12 col-sm-9">
                                 <input type="text" class="form-control" id="inputId">
                             </div>
                         </div>
                         <div class="form-group">
-                            <div class="col-xs-12 col-sm-2">
+                            <div class="col-xs-12 col-sm-3">
                                 <label for="inputClub">Club</label>
                             </div>
-                            <div class="col-xs-12 col-sm-10">
+                            <div class="col-xs-12 col-sm-9">
                                 <input type="text" class="form-control" id="inputClub">
                             </div>
                         </div>
                         <div class="form-group">
-                            <div class="col-xs-12 col-sm-2">
+                            <div class="col-xs-12 col-sm-3">
                                 <label for="inputbody">Body Building</label>
                             </div>
-                            <div class="col-xs-12 col-sm-10">
+                            <div class="col-xs-12 col-sm-9">
                                 <select class="form-control" id="inputbody">
                                     <option>Under 65Kg Class</option>
                                     <option>65Kg - 75kg Class</option>
@@ -90,10 +90,10 @@
                             </div>
                         </div>
                         <div class="form-group">
-                            <div class="col-xs-12 col-sm-2">
+                            <div class="col-xs-12 col-sm-3">
                                 <label for="inputMen">Category Men Fitness</label>
                             </div>
-                            <div class="col-xs-12 col-sm-10">
+                            <div class="col-xs-12 col-sm-9">
                                 <select class="form-control" id="inputMen">
                                     <option>New Muscle</option>
                                     <option>Middle Muscle</option>
@@ -101,10 +101,10 @@
                             </div>
                         </div>
                         <div class="form-group">
-                            <div class="col-xs-12 col-sm-2">
+                            <div class="col-xs-12 col-sm-3">
                                 <label for="inputWomen">Category Women Fitness</label>
                             </div>
-                            <div class="col-xs-12 col-sm-10">
+                            <div class="col-xs-12 col-sm-9">
                                 <select class="form-control" id="inputWomen">
                                     <option>Figure</option>
                                     <option>Beauty</option>
@@ -112,22 +112,10 @@
                             </div>
                         </div>
                         <div class="form-group">
-                            <div class="col-xs-12 col-sm-2">
+                            <div class="col-xs-12 col-sm-3">
                                 <label for="inputring">Category Ring Girl Search</label>
                             </div>
-                            <div class="col-xs-12 col-sm-10">
-                                <select class="form-control" id="inputring">
-                                    <option>People's Favorite</option>
-                                    <option>The Most Inspirational</option>
-                                    <option>The Best Media Influencer</option>
-                                </select>
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <div class="col-xs-12 col-sm-2">
-                                <label for="inputring">Category Ring Girl Search</label>
-                            </div>
-                            <div class="col-xs-12 col-sm-10">
+                            <div class="col-xs-12 col-sm-9">
                                 <select class="form-control" id="inputring">
                                     <option>People's Favorite</option>
                                     <option>The Most Inspirational</option>
@@ -136,30 +124,30 @@
                             </div>
                         </div>
                         <div class="form-group clearfix training">
-                            <div class="col-xs-12 col-sm-2">
+                            <div class="col-xs-12 col-sm-3">
                                 <label class="block " for="inputpay">Choose Your Training</label>
                             </div>
-                            <div class="row">
-                                <label class="col-xs-12 col-sm-3">
+                            <div class="col-xs-12 col-sm-9 row">
+                                <label class="col-xs-12 col-sm-4">
                                     <input type="checkbox" value=""> Body Building - 500.000, - IDR
                                 </label>
-                                <label class="col-xs-12 col-sm-3">
+                                <label class="col-xs-12 col-sm-4">
                                     <input type="checkbox" value=""> Men and Women Fitness - 300.000, - IDR
                                 </label>
-                                <label class="col-xs-12 col-sm-3">
+                                <label class="col-xs-12 col-sm-4">
                                     <input type="checkbox" value=""> Ring Girls - 300.000, - IDR
                                 </label>
                             </div>
                         </div>
                         <div class="form-group clearfix payment">
-                            <div class="col-xs-12 col-sm-2">
+                            <div class="col-xs-12 col-sm-3">
                                 <label class="block " for="inputpay">Account Payment</label>
                             </div>
-                            <div class="row">
-                                <label class="col-xs-12 col-sm-4">
+                            <div class="col-xs-12 col-sm-9 row">
+                                <label class="col-xs-12 col-sm-6">
                                     <input name="optionsRadios" type="radio" id="paymentoption1" value="BCA"> BCA A/N ANITA NO REK 2861521461 KCP KEMANG
                                 </label>
-                                <label class="col-xs-12 col-sm-4">
+                                <label class="col-xs-12 col-sm-6">
                                     <input name="optionsRadios" type="radio" id="paymentoption1" value="BNI"> BNI A/N IBU ANITA NO REK 0239939856 CAB MELAWAI RAYA
                                 </label>
                             </div>
