--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                         </div>
                         <div class="form-group">
                             <div class="col-xs-12 col-sm-3">
-                                <label for="inputId">ID (KTP/KITAS)</label>
+                                <label for="inputId">ID (KTP/KITAS/Passport)</label>
                             </div>
                             <div class="col-xs-12 col-sm-9">
                                 <input type="text" class="form-control" id="inputId">
@@ -71,7 +71,7 @@
                         </div>
                         <div class="form-group">
                             <div class="col-xs-12 col-sm-3">
-                                <label for="inputClub">Club</label>
+                                <label for="inputClub">Club / Country</label>
                             </div>
                             <div class="col-xs-12 col-sm-9">
                                 <input type="text" class="form-control" id="inputClub">
