--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
                             </div>
                             <div class="col-xs-12 col-sm-9">
                                 <select class="form-control" id="inputbody">
+                                	<option>-</option>
                                     <option>Under 65Kg Class</option>
                                     <option>65Kg - 75kg Class</option>
                                     <option>75Kg Plus Class</option>
@@ -95,6 +96,7 @@
                             </div>
                             <div class="col-xs-12 col-sm-9">
                                 <select class="form-control" id="inputMen">
+                                    <option>-</option>
                                     <option>New Muscle</option>
                                     <option>Middle Muscle</option>
                                 </select>
@@ -106,6 +108,7 @@
                             </div>
                             <div class="col-xs-12 col-sm-9">
                                 <select class="form-control" id="inputWomen">
+                                	<option>-</option>
                                     <option>Figure</option>
                                     <option>Beauty</option>
                                 </select>
@@ -117,6 +120,7 @@
                             </div>
                             <div class="col-xs-12 col-sm-9">
                                 <select class="form-control" id="inputring">
+                                	<option>-</option>
                                     <option>People's Favorite</option>
                                     <option>The Most Inspirational</option>
                                     <option>The Best Media Influencer</option>
