--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
-			<script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-			<script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-		<![endif]-->
+            <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+            <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+        <![endif]-->
 </head>
 
 <body>
@@ -27,6 +27,7 @@
         </div>
         <div class="page-content spacepad">
             <div class="container spacemar">
+                <!-- form start -->
                 <div>
                     <form class="form-horizontal">
                         <div class="form-group">
@@ -83,7 +84,7 @@
                             </div>
                             <div class="col-xs-12 col-sm-9">
                                 <select class="form-control" id="inputbody">
-                                	<option>-</option>
+                                    <option>-</option>
                                     <option>Under 65Kg Class</option>
                                     <option>65Kg - 75kg Class</option>
                                     <option>75Kg Plus Class</option>
@@ -108,7 +109,7 @@
                             </div>
                             <div class="col-xs-12 col-sm-9">
                                 <select class="form-control" id="inputWomen">
-                                	<option>-</option>
+                                    <option>-</option>
                                     <option>Figure</option>
                                     <option>Beauty</option>
                                 </select>
@@ -120,7 +121,7 @@
                             </div>
                             <div class="col-xs-12 col-sm-9">
                                 <select class="form-control" id="inputring">
-                                	<option>-</option>
+                                    <option>-</option>
                                     <option>People's Favorite</option>
                                     <option>The Most Inspirational</option>
                                     <option>The Best Media Influencer</option>
@@ -159,11 +160,24 @@
                         <button type="submit" class="btn btn-default">Submit</button>
                     </form>
                 </div>
+                <!-- /form -->
+                <div class="rules spacepad spacemar">
+                    <ul>
+                        <li>rules 1</li>
+                        <li>rules 2</li>
+                        <li>rules 3</li>
+                    </ul>
+                </div>
             </div>
         </div>
         <div class="page-footer spacepad">
-            <div class="spacepad">
-                <img class="img-responsive center-block" src="asset/img/goldgym-sponsor.jpg" alt="Gold Gym Sponsor">
+            <div class="container pos-relative">
+                <div class="arrow downward">
+                    <i class="fa fa-arrow-down fa-2x"></i>
+                </div>
+                <div class="spacepad">
+                    <img class="img-responsive center-block" src="asset/img/goldgym-sponsor.jpg" alt="Gold Gym Sponsor">
+                </div>
             </div>
         </div>
     </div>
@@ -172,6 +186,17 @@
     <!-- Bootstrap JavaScript -->
     <!-- Latest compiled and minified JavaScript -->
     <script src="asset/js/bootstrap.min.js"></script>
+    <script type="text/javascript">
+    $(document).ready(function(){
+
+        $('.rules').hide();
+        $('.arrow').click(function(){
+            $(this).toggleClass('downward upward');
+            $('.rules').slideToggle();
+        });
+
+    });
+    </script>
 </body>
 
 </html>
